prevented all scrolling on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -161,12 +161,16 @@
 }
 
 html {
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 body {
     background-color: var(--background);
+    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 /* ==================================================================================================================== */
